jdk25 support and gradle upgrade  (#158)
* jdk25 support

Signed-off-by: Prudhvi Godithi <pgodithi@amazon.com>

* jdk25 support

Signed-off-by: Prudhvi Godithi <pgodithi@amazon.com>

* jdk25 support

Signed-off-by: Prudhvi Godithi <pgodithi@amazon.com>

* spotlessApply

Signed-off-by: Prudhvi Godithi <pgodithi@amazon.com>

---------

Signed-off-by: Prudhvi Godithi <pgodithi@amazon.com>